<resources>
    <string name="app_name">The Fun Bakery</string>

    <string name="main_top_menu_today">오늘</string>
    <string name="main_top_menu_history">히스토리</string>
    <string name="main_top_menu_guest">방명록</string>
    <string name="kakao_app_key">f3d5f8f3a758ced5a94d9d4373e9b99f</string>
    <string name="login_with_kakao_talk">카카오톡으로 시작</string>
    <string name="title_for_nickname_regist">마이홈 닉네임 입력</string>
    <string name="done_for_nickname_regist">입주</string>
    <string name="desc_for_nickname_regist">입력하신 닉네임으로 마이홈을 사용하고 친구와 서로를 구분합니다.</string>
    <string name="hint_for_nickname">닉네임을 입력해주세요.</string>
    <string name="feeling_select_title">느낌 더하기</string>
    <string name="feeling_image_title">이미지 더하기</string>
    <string name="next">다음</string>
    <string name="icon_gallery">갤러리</string>
    <string name="icon_camera">직접 촬영</string>
    <string name="icon_video">동영상</string>
    <string name="icon_search">검색</string>
    <string name="story_write_title">이야기 더하기</string>
    <string name="done">완료</string>
    <string name="hint_for_story">오늘 느낌에 대해 이야기해주세요.</string>
    <string name="share_content">함께 공유</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
</resources>
