<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="14.5dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_for_nickname_regist"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/btn_nickname_done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/done_for_nickname_regist"
            android:textSize="20sp"
            android:textColor="@color/orange"
            android:paddingRight="14.5dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp">

        <ImageView
            android:layout_width="58dp"
            android:layout_height="62.5dp"
            android:src="@drawable/ic_home_icon"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="21.5dp"
            android:paddingLeft="15dp"
            android:paddingRight="5dp"
            android:background="@drawable/rect_black_bg">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nickname_edit_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_for_nickname"
                android:background="@android:color/transparent"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:id="@+id/btn_delete_nickname"
                android:layout_width="38dp"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_clear_white_24"
                android:padding="6dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.5dp"
            android:text="@string/desc_for_nickname_regist"
            android:textColor="#000000"
            android:textSize="15sp"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>
    </LinearLayout>
</LinearLayout>