<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/story_close_btn"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:layout_marginLeft="18dp"
                android:background="@drawable/baseline_clear_black_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/story_write_title"
                android:textSize="20sp"
                android:layout_marginLeft="12dp"
                android:textColor="#000000"/>
        </LinearLayout>

        <TextView
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_alignParentRight="true"
            android:text="@string/done"
            android:textSize="20sp"
            android:textColor="@color/orange"
            android:fontFamily="sans-serif-medium"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_weight="1.2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:id="@+id/story_feeling_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#000000"
                android:gravity="center">

                <ImageView
                    android:id="@+id/feeling_preview"
                    android:layout_width="220dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_feel_hug" />

                <TextView
                    android:id="@+id/current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-thin"
                    tools:text="2019. 10. 01  I  5 : 32 : 32 pm"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp">

            <LinearLayout
                android:id="@+id/bottom_share_layout"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="21dp">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/ic_share"
                        android:layout_marginRight="7dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/share_content"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="28dp"
                    android:paddingLeft="2dp">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/instagram"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_switch_on"
                        android:layout_marginRight="7dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="34dp"
                    android:paddingLeft="2dp">

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/facebook"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_switch_on"
                        android:layout_marginRight="7dp"/>
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/story_edit_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                android:hint="@string/hint_for_story"
                android:textSize="14sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-thin"
                android:textColorHint="@color/light_black"
                android:gravity="top"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>