<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/image_close_btn"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:layout_marginLeft="18dp"
                android:background="@drawable/baseline_clear_black_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feeling_image_title"
                android:textSize="20sp"
                android:layout_marginLeft="12dp"
                android:textColor="#000000"/>
        </LinearLayout>

        <TextView
            android:id="@+id/image_done_btn"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_alignParentRight="true"
            android:text="@string/next"
            android:textSize="20sp"
            android:textColor="@color/orange"
            android:fontFamily="sans-serif-medium"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_weight="1.2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:id="@+id/feeling_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#000000"
                android:gravity="center">

                <ImageView
                    android:id="@+id/feeling_preview"
                    android:layout_width="220dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_feel_hug" />

                <TextView
                    android:id="@+id/current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-thin"
                    tools:text="2019. 10. 01  I  5 : 32 : 32 pm"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:id="@+id/gallery_btn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:background="@drawable/ic_gallery"
                        android:layout_marginBottom="7dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_gallery"
                        android:textSize="13sp"
                        android:textColor="@color/light_black"
                        android:fontFamily="sans-serif-thin"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:background="@drawable/ic_camera"
                        android:layout_marginBottom="7dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_camera"
                        android:textSize="13sp"
                        android:textColor="@color/light_black"
                        android:fontFamily="sans-serif-thin"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/camera_btn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:background="@drawable/ic_video"
                        android:layout_marginBottom="7dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_video"
                        android:textSize="13sp"
                        android:textColor="@color/light_black"
                        android:fontFamily="sans-serif-thin"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:background="@drawable/ic_search"
                        android:layout_marginBottom="7dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/icon_search"
                        android:textSize="13sp"
                        android:textColor="@color/light_black"
                        android:fontFamily="sans-serif-thin"/>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>